Fix CSS of version selector: options were in white in the guides
Thus unreadable.

--- a/_sass/layouts/guides.scss
+++ b/_sass/layouts/guides.scss
@@ -279,33 +279,37 @@ div.guides-configuration-reference {
 /*=============== Versioning Controls =================== */
 
 #guidesindex-version-dropdown {
-background-color: transparent;
-color: $white;
-border: 1px solid $white;
-font-size: 1.35rem;
-margin-top: 15px;
-padding-left: 7px;
-padding-right: 7px;
+  background-color: transparent;
+  color: $white;
+  border: 1px solid $white;
+  font-size: 1.35rem;
+  margin-top: 15px;
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
 #guidesindex-version-label {
-color: $white;
-font-size: 1.25rem;
-margin-right: .5rem;
+  color: $white;
+  font-size: 1.25rem;
+  margin-right: .5rem;
 }
 
 #guide-version-dropdown {
-background-color: $white;
-color: $dark-blue;
-border: 1px solid $quarkus-blue;
-font-size: 1.35rem;
-margin-top: 15px;
-padding-left: 7px;
-padding-right: 7px;
+  background-color: $white;
+  color: $dark-blue;
+  border: 1px solid $quarkus-blue;
+  font-size: 1.35rem;
+  margin-top: 15px;
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+#guide-version-dropdown option {
+  color: $dark-blue;
 }
 
 #guide-version-label {
-color: $dark-blue;
-font-size: 1.25rem;
-margin-right: .5rem;
+  color: $dark-blue;
+  font-size: 1.25rem;
+  margin-right: .5rem;
 }
